--- a/style.css
+++ b/style.css
@@ -1,8 +1,9 @@
 *{
     margin: 0;
     padding: 0;
+    font-family: "Noto Sans", sans-serif;
 }
-
+/* header class */
 .header{
     min-height: 100vh ;
     width: 100%;
@@ -10,4 +11,46 @@
     background-position: center;
     background-size: cover;
     position: relative;
+}
+/* nevigation bar*/
+nav{
+    display: flex;
+    padding: 2% 6%;
+    justify-content: space-between;
+    align-items: center;
+}
+/* logo */
+nev img{
+    width: 150px;
+}
+/* nevbar menu*/
+.nav-links{
+    flex: 1;
+    text-align: right;
+}
+/* nevbar menu links*/
+.nav-links ul li{
+    list-style: none;
+    display: inline-block;
+    padding: 10px 20px;
+    position: relative;
+}
+/* nevbar menu links decoration */
+.nav-links ul li a{ 
+    color: aliceblue;
+    text-decoration: none ;
+    font-size: 13px;
+}
+/* nevbar menu links hover */
+.nav-links ul li::after{
+    content: '';
+    width: 0%;
+    height: 2px;
+    background: #430A5D;
+    display: block;
+    margin: auto;
+    transition: 0.5s;
+}
+.nav-links ul li:hover::after{
+    width: 100%;
 }
