--- a/style.css
+++ b/style.css
@@ -90,5 +90,44 @@ nev img{
     transition: 1s;
 }
 
+/*Responsive mobile*/
+/* not visible icon in full screen*/
+nav .fa{
+    display: none;
+}
 
+@media(max-width: 700px)
+{
+    /*watchlist*/
+    .text-box h1{
+        font-size: 28px;
+    }
+    /*menu*/
+    .nav-links ul li{ 
+        display: block;
+    }
+    .nav-links{ 
+        position: absolute;
+        background: #430A5D;
+        opacity: 0.99;
+        height: 100vh;
+        width: 150px;
+        top: 0;
+        right: -150px;
+        text-align: left;
+        z-index: 2;
+        transition: 1s;
+    }
+    /*visible icon in small screen*/
+    nav .fa{
+        display: block;
+        color: aliceblue;
+        margin: 10px;
+        font-size: 22px;
+        cursor: pointer;
+    }
+    .nav-links ul{
+        padding: 15px;
+    }
+}
 
