--- a/style.css
+++ b/style.css
@@ -131,3 +131,52 @@ nav .fa{
     }
 }
 
+/*-----course------*/
+
+.Genre{
+    width: 80%;
+    margin: auto;
+    text-align: center;
+    padding-top: 100px;
+}
+h1{
+    font-size: 36px;
+    font-weight: 600;
+
+}
+p{
+    color: black;
+    font-size: 14px;
+    font-weight: 300;
+    line-height: 22px;
+    padding: 10px;
+}
+
+/*----3 rows-----*/
+.row{
+    margin-top: 5%;
+    display: flex;
+    justify-content: space-between;
+}
+
+/*-----background------*/
+.Genre-col{
+    flex-basis: 31%;
+    background: blanchedalmond;
+    opacity: 80%;
+    border-radius: 10px;
+    margin-bottom: 5%;
+    padding: 20px 12px;
+    box-sizing: border-box;
+}
+
+h3{
+    text-align: center;
+    font-weight: 600;
+    margin: 10px 0;
+}
+
+/*----hover effect-----*/
+.Genre-col:hover{
+    box-shadow: 0 0 20px 0px rgba(4,9,30,0.7);
+}
