--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@ nev img{
     transition: 1s;
 }
 
-/*Responsive mobile*/
+/*Responsive mobile menu*/
 /* not visible icon in full screen*/
 nav .fa{
     display: none;
@@ -179,4 +179,62 @@ h3{
 /*----hover effect-----*/
 .Genre-col:hover{
     box-shadow: 0 0 10px 0 rgba(111, 78, 55, 1);
+}
+
+/*Responsive mobile genre*/
+
+@media(max-width: 700px){
+    .row{
+        flex-direction: column;
+    }
+    
+}
+
+/*----theater-----*/
+
+.theater{
+    width: 80%;
+    margin: auto;
+    text-align: center;
+    padding-top: 50px;
+}
+.theater-col{
+    flex-basis: 32%;
+    border-radius: 10px;
+    margin-bottom: 30px;
+    position: relative;
+    overflow: hidden;
+}
+.theater-col img{
+    width: 100%;
+    display: block;
+}
+.layer{
+    background: rgba(111, 78, 55, 0.7);
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    top:  0;
+    left: 0;
+    transition: 0.5s;
+}
+.layer:hover{
+    background: transparent;
+}
+.layer h3{
+    color: aliceblue;
+    width: 100%;
+    font-weight: 500;
+    font-size: 20px;
+    bottom: 0%;
+    left: 50%;
+    transform: translate(-50%);
+    position: absolute;
+    opacity: 0;
+    transition: 0.5s;
+}
+.layer:hover h3{
+    bottom: 30%;
+    opacity: 1;
+
 }
