--- a/style.css
+++ b/style.css
@@ -238,3 +238,25 @@ h3{
     opacity: 1;
 
 }
+
+/*----------footer---------*/
+.footer{
+    background-color: #74512D;
+    width: 100%;
+    text-align: center;
+    padding: 30px 0;
+}
+
+.footer h4{
+    margin-top: 20px;
+    margin-bottom: 25 px;
+    font-weight: 600;
+}
+
+.icons .fa {
+    color: #430A5D;
+    margin: 0 13 px;
+    cursor: pointer;
+    padding: 18px 0;
+
+}
