--- a/style.css
+++ b/style.css
@@ -302,26 +302,29 @@ h3{
 }
 
 
+/*---call to action----*/
 
+.cta{
+    margin: 100px auto;
+    width: 80%;
+    background-image: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)), url(Photos/banner2.jpg);
+    background-position: center;
+    background-size: cover;
+    border-radius: 10px;
+    text-align: center;
+    padding: 100px 0; 
+}
+.cta h1{
+    color: aliceblue;
+    margin-bottom: 40px;
+    padding: 0;
+}
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+@media(max-width: 700px){
+    .cta h1{
+        font-size: 24px;
+    }
+}
 
 /*----------footer---------*/
 .footer{
