--- a/style.css
+++ b/style.css
@@ -347,3 +347,56 @@ h3{
     padding: 18px 0;
 
 }
+
+
+/*----------About us---------*/
+.sub-header{
+    height: 50vh;
+    width: 100%;
+    background: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)),url(Photos/background.jpg);
+    background-position: center;
+    text-align: center;
+    color: aliceblue;
+}
+
+.sub-header h1{
+    margin-top: 90px;
+
+}
+.about-us{
+    width: 80%;
+    margin: auto;
+    padding-top: 80px;
+    padding-bottom: 50px;
+
+}
+.about-col{
+    flex-basis: 48%;
+    padding: 30px 2px;
+}
+.about-col img{
+    width: 100%;
+}
+.about-col h1{
+    padding: 0%;
+}
+.about-col p{
+    padding: 15px 0 25px;
+}
+.add-btn{
+    border: 1px solid #430A5D;
+    background: transparent;
+    color: #430A5D;
+}
+.add-btn:hover{
+    color: aliceblue;
+    
+}
+
+
+
+
+
+
+
+
