--- a/style.css
+++ b/style.css
@@ -107,7 +107,7 @@ nav .fa{
         display: block;
     }
     .nav-links{ 
-        position: absolute;
+        position: fixed;
         background: #430A5D;
         opacity: 0.99;
         height: 100vh;
@@ -418,6 +418,97 @@ h3{
     margin-top: 60px;
     text-align: center;
 }
+
+
+/*---------contact--------*/
+
+.location{
+    
+    width: 80%;
+    margin: 0 auto;
+    padding: 80 px; 
+}
+/*.location h3{
+    text-align: center;
+    margin-top: 40px;
+    margin-bottom: 30px;
+}*/
+.location iframe{
+    margin-top: 100px;
+    width: 100%;
+}
+.contact-us{
+    width: 80%;
+    margin: auto;
+    }
+    .contact-col{
+    flex-basis: 48%;
+    margin-bottom: 30px;
+    }
+    .contact-col div{
+    display: flex;
+    align-items: center;
+    margin-bottom: 40px;
+    }
+    .contact-col div .fa{
+    font-size: 28px;
+    color: #430A5D;
+    margin: 10px;
+    margin-right: 30px
+    }
+.contact-col div p{
+    padding: 0;
+}
+.contact-col div h5{
+    font-size: 20px;
+    margin-bottom: 5px;
+    font-weight: 400;
+}
+
+.contact{
+    width: 80%;
+    margin: auto;
+    padding: 60px 0;
+}
+.comment-box {
+    
+    border: 1px solid #ccc;
+    margin: 50px 0;
+    padding: 10px 20px;
+}
+.comment-box h3{
+    text-align: left;
+}
+.comment-form input, .comment-form textarea{
+    width: 100%;
+    padding: 10px;
+    margin: 15px 0;
+    box-sizing: border-box;
+    border: none;
+    outline: none;
+    background: #ccc;
+}
+.comment-form button{
+    margin: 10px 0;
+}
+
+.contact-col input, .contact-col textarea
+{
+    width: 100%;
+    padding: 15px;
+    margin-bottom: 17px;
+    outline: none;
+    border: 1px solid #430A5D;
+    box-sizing: border-box;
+}
+
+
+
+
+
+
+
+
 
 
 
